fixed the overlapping bookingcards;

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -27,6 +27,14 @@ h2{
 
 .booking-card {
   overflow: hidden;
+  width: 70%;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  align-items: center;
+}
+
+.booking-carddashboard {
+  overflow: hidden;
   height: 120px;
   width: 70%;
   background: white;
